Implemented Task repository class: part 1